# internal/http/gen/model.go
@@ -3,6 +3,42 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.7.1 DO NOT EDIT.
 package gen
 
+// Amazon defines model for Amazon.
+type Amazon struct {
+	Asin    string  `json:"asin"`
+	Comment *string `json:"comment,omitempty"`
+	Maker   string  `json:"maker"`
+	Name    string  `json:"name"`
+	Price   int64   `json:"price"`
+	Url     string  `json:"url"`
+}
+
+// AmazonPatch defines model for AmazonPatch.
+type AmazonPatch struct {
+	Comment *string `json:"comment,omitempty"`
+	Maker   *string `json:"maker,omitempty"`
+	Name    *string `json:"name,omitempty"`
+	Price   *int64  `json:"price,omitempty"`
+	Url     *string `json:"url,omitempty"`
+}
+
+// AmazonResponse defines model for AmazonResponse.
+type AmazonResponse struct {
+	// Embedded struct due to allOf(#/components/schemas/Amazon)
+	Amazon `yaml:",inline"`
+	// Embedded fields due to inline allOf schema
+	Id int64 `json:"id"`
+}
+
+// AmazonUpdate defines model for AmazonUpdate.
+type AmazonUpdate struct {
+	Comment *string `json:"comment,omitempty"`
+	Maker   string  `json:"maker"`
+	Name    string  `json:"name"`
+	Price   int64   `json:"price"`
+	Url     string  `json:"url"`
+}
+
 // Error defines model for Error.
 type Error struct {
 	Code    int32  `json:"code"`
@@ -25,14 +61,42 @@ type PetResponse struct {
 // ID defines model for ID.
 type ID int64
 
+// Key defines model for Key.
+type Key string
+
 // Limit defines model for Limit.
 type Limit int32
 
 // Order defines model for Order.
 type Order string
 
+// Page defines model for Page.
+type Page int32
+
 // PetTags defines model for PetTags.
 type PetTags []string
+
+// FindAmazonsParams defines parameters for FindAmazons.
+type FindAmazonsParams struct {
+
+	// maximum number of results to return
+	Order *Order `json:"order,omitempty"`
+
+	// maximum number of results to return
+	Limit *Limit `json:"limit,omitempty"`
+
+	// pager
+	Page *Page `json:"page,omitempty"`
+}
+
+// CreateAmazonJSONBody defines parameters for CreateAmazon.
+type CreateAmazonJSONBody Amazon
+
+// PatchAmazonJSONBody defines parameters for PatchAmazon.
+type PatchAmazonJSONBody AmazonPatch
+
+// UpdateAmazonJSONBody defines parameters for UpdateAmazon.
+type UpdateAmazonJSONBody AmazonUpdate
 
 // FindPetsParams defines parameters for FindPets.
 type FindPetsParams struct {
@@ -49,6 +113,15 @@ type FindPetsParams struct {
 
 // AddPetJSONBody defines parameters for AddPet.
 type AddPetJSONBody Pet
+
+// CreateAmazonJSONRequestBody defines body for CreateAmazon for application/json ContentType.
+type CreateAmazonJSONRequestBody CreateAmazonJSONBody
+
+// PatchAmazonJSONRequestBody defines body for PatchAmazon for application/json ContentType.
+type PatchAmazonJSONRequestBody PatchAmazonJSONBody
+
+// UpdateAmazonJSONRequestBody defines body for UpdateAmazon for application/json ContentType.
+type UpdateAmazonJSONRequestBody UpdateAmazonJSONBody
 
 // AddPetJSONRequestBody defines body for AddPet for application/json ContentType.
 type AddPetJSONRequestBody AddPetJSONBody
